responsive-design-added

--- a/index.html
+++ b/index.html
@@ -10,41 +10,49 @@
 </head>
 
 <body>
-  <header>
-    <div class="container row">
+  <section class="hero">
+    <div class="container">
       <p>lorem ipsum sit</p>
       <h1>Responsive layouts don’t have to be a struggle</h1>
     </div>
-  </header>
+  </section>
   <section class="quality-design container">
     <h2>Quality Designs</h2>
     <div class="row">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscin elit,
-        sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Dui vivamus arcu felis bibendum ut
-        tristique. Arcu dui vivamus arcu felis. Sociis natoque
-        penatibus et magnis dis.</p>
-      <p>Felis donec et odio pellentesque diam volutpat. Aliquam
-        purus sit amet luctus venenatis. Turpis in eu mi
-        bibendum neque egestas congue quisque egestas.
-        Pellentesque sit amet porttitor eget dolor morbi non.</p>
+      <div class="col">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscin elit,
+          sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Dui vivamus arcu felis bibendum ut
+          tristique. Arcu dui vivamus arcu felis. Sociis natoque
+          penatibus et magnis dis.</p>
+      </div>
+      <div class="col">
+        <p>Felis donec et odio pellentesque diam volutpat. Aliquam
+          purus sit amet luctus venenatis. Turpis in eu mi
+          bibendum neque egestas congue quisque egestas.
+          Pellentesque sit amet porttitor eget dolor morbi non.</p>
+      </div>
     </div>
   </section>
   <section class="custom ">
     <div class="container row">
-      <div>
+      <div class="col">
         <h2>Made custom for you</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
           sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam.</p>
       </div>
-      <img src="img/image-01.jpg" alt="">
+      <div class="col">
+        <img src="img/image-01.jpg" alt="">
+      </div>
     </div>
   </section>
   <section class="care">
     <div class="container row">
-      <img src="img/image-02.jpg" alt="">
-      <div>
+      <div class="col">
+        <img src="img/image-02.jpg" alt="">
+      </div>
+      <div class="col">
         <h2>Created with care</h2>
         <p>Felis donec et odio pellentesque diam volutpat. Aliquam
           purus sit amet luctus venenatis. Turpis in eu mi
